@@ -1,205 +1,8 @@
-#ifdef LOG_ALLOC
-
-#include <stdio.h>
-#include <string.h>
-
-static void* m_arr2[100000];
-static int m_entries = 100000;
-
-static void init_pointer_array()
-{
-	static int m_arr_init = 0;
-	if( m_arr_init == 0 ) {
-		printf("initializaing array\n");
-		memset(m_arr2, 0x00, sizeof(m_arr2));
-		m_arr_init = 1;
-	}
-}
-
-void print_leaked_pointers()
-{
-	printf("leaked pointers:\n");
-	int i = 0;
-	for( ; i < m_entries; ++i )
-	{
-		if( m_arr2[i] != NULL )
-			printf("%p\n", m_arr2[i]);
-	}
-}
-
-static void add_pointer(void* ptr)
-{
-	if( ptr == NULL )
-		return;
-
-	int i = 0;
-	for( ; i < m_entries; ++i )
-	{
-		if( m_arr2[i] == NULL )
-		{
-			m_arr2[i] = ptr;
-			break;
-		}
-	}
-	
-	if( i == m_entries )
-		printf("pointer array too small\n");
-}
-
-static void replace_pointer(void* old_ptr, void* new_ptr)
-{
-	if( old_ptr == NULL ) {
-		add_pointer(new_ptr);
-		return;
-	}
-
-	int i = 0;
-	for( ; i < m_entries; ++i )
-	{
-		if( m_arr2[i] == old_ptr )
-		{
-			m_arr2[i] = new_ptr;
-			break;
-		}
-	}
-	
-	if( i == m_entries )
-		printf("pointer not found in array\n");
-}
-
-static void remove_pointer(void* ptr)
-{
-	replace_pointer(ptr, NULL);
-}
-
-static int m = 0;
-
-void* mrt_malloc(size_t size)
-{
-	init_pointer_array();
-
-	void* ptr = malloc(size);
-	printf("%d - malloc - %zu - %p\n", ++m, size, ptr);
-	add_pointer(ptr);
-	return ptr;
-}
-
-char* mrt_strdup(const char* str)
-{
-	init_pointer_array();
-
-	char* ptr = strdup(str);
-	printf("%d - strdup - %p\n", ++m, ptr);
-	add_pointer(ptr);
-	return ptr;
-}
-
-void* mrt_realloc(void* ptr, size_t size)
-{
-	init_pointer_array();
-
-	void* ptr2 = realloc(ptr, size);
-	printf("%d - realloc - %p - %zu - %p\n", (ptr == NULL) ? ++m : -1, ptr, size, ptr2);
-	replace_pointer(ptr, ptr2);
-	return ptr2;
-}
-
-void mrt_free(void *ptr)
-{
-	if( ptr != NULL )
-	{
-		printf("%d - free - %p\n", --m, ptr);
-		free(ptr);
-		remove_pointer(ptr);
-	}
-}
-
-/* libxml2 */
-#ifdef __MINGW32__
-#define IN_LIBXML
-#endif
-#include <libxml/parser.h>
-#include <libxml/xmlmemory.h>
-
-xmlDocPtr mrt_xmlNewDoc(const xmlChar* version)
-{
-	init_pointer_array();
-	
-	xmlDocPtr ptr = xmlNewDoc(version);
-	printf("%d - xmlNewDoc - %p\n", ++m, ptr);
-	add_pointer(ptr);
-	return ptr;
-}
-
-xmlDocPtr mrt_xmlReadFile(const char* URL, const char* encoding, int options)
-{
-	init_pointer_array();
-	
-	xmlDocPtr ptr = xmlReadFile(URL, encoding, options);
-	printf("%d - xmlReadFile - %p\n", ++m, ptr);
-	add_pointer(ptr);
-	return ptr;
-}
-
-void mrt_xmlFreeDoc(xmlDocPtr ptr)
-{
-	if( ptr != NULL )
-	{
-		printf("%d - xmlFreeDoc - %p\n", --m, ptr);
-		xmlFreeDoc(ptr);
-		remove_pointer(ptr);
-	}
-}
-
-xmlChar* mrt_xmlGetProp(xmlNodePtr node, const xmlChar* name)
-{
-	init_pointer_array();
-	
-	xmlChar* ptr = xmlGetProp(node, name);
-	printf("%d - xmlGetProp - %p\n", (ptr != NULL) ? ++m : -1, ptr);
-	add_pointer(ptr);
-	return ptr;
-}
-
-xmlChar* mrt_xmlStrdup(const xmlChar* cur)
-{
-	init_pointer_array();
-	
-	xmlChar* ptr = xmlStrdup(cur);
-	printf("%d - xmlStrdup - %p\n", ++m, ptr);
-	add_pointer(ptr);
-	return ptr;
-}
-
-xmlChar* mrt_xmlNodeGetContent(xmlNodePtr cur)
-{
-	init_pointer_array();
-	
-	xmlChar* ptr = xmlNodeGetContent(cur);
-	printf("%d - xmlNodeGetContent - %p\n", ++m, ptr);
-	add_pointer(ptr);
-	return ptr;
-}
-
-void mrt_xmlFree(void* ptr)
-{
-	if( ptr != NULL )
-	{
-		printf("%d - xmlFree - %p\n", --m, ptr);
-		xmlFree(ptr);
-		remove_pointer(ptr);
-	}
-}
-
-#else
-
 #include <stdlib.h>
 #include <stdio.h>
 #include <string.h>
 #include <ctype.h>
 #include <errno.h>
-
-#endif
 
 #ifdef __MINGW32__
 #undef htonl
@@ -253,14 +56,12 @@ void mrt_xmlFree(void* ptr)
 /* zlib */
 #include <zlib.h>
 
-#ifndef LOG_ALLOC
 /* libxml2 */
 #ifdef __MINGW32__
 #define IN_LIBXML
 #endif
 #include <libxml/xmlmemory.h>
 #include <libxml/xpath.h>
-#endif
 
 #include "common.h"
 
