@@ -713,6 +713,7 @@
     - avoided some strlen() usage
     - replaced some ext() calls with return
     - added CMake option "USE_SANITIZERS" to enable AddressSanitizer/UndefinedBehaviorSanitizer if supported
+    - removed "LOG_ALLOC" in favor of sanitizers
 
     create_report
     - fixed some clang-tidy warnings
